--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@unseenco/taxi": "^1.7.0",
+    "@vercel/analytics": "^1.4.0",
+    "@vercel/speed-insights": "^1.1.0",
     "gsap": "^3.12.5",
     "lil-gui": "^0.19.2",
     "three": "^0.166.1"
